Highlights on /about render correctly in dark modey

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,14 @@
 :root {
   --grey-1: #c7c7c7;
   --grey-2: #6f6f6f;
+  --mark-color: #161616;
 }
 
 /* use data-theme instead of class? */
 :root.dark {
   --grey-1: #505050;
   --grey-2: #a0a0a0;
+  --mark-color: #444667;
 }
 
 html {
